# iksemel-rust

./: .coderabbit.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  SECURITY.md  iks.doap
.github/: dependabot.yml
.github/workflows/: check_version.py  ci.yml  codeql.yml  heavy.yml  release.yml
scripts/: format.sh  miri.sh  test.sh
src/: arena.rs  document.rs  entities.rs  lib.rs  parser.rs
src/arena/: error.rs  mod.rs  tests.rs
src/document/: builder.rs  error.rs  iterators.rs  mod.rs  nocompile.rs  parser.rs  sync_cursor.rs  sync_iterators.rs  tests.rs
src/parser/: error.rs  location.rs  mod.rs  nocompile.rs  tests.rs
src/xmpp/: client.rs  constants.rs  error.rs  jid.rs  mod.rs  parser.rs  protocol.rs  tests.rs
src/xmpp/jid/: error.rs  mod.rs  tests.rs
src/xmpp/stream/: mod.rs  tests.rs
src/xpath/: error.rs  mod.rs  tests.rs
