[package]
categories = ["parsing", "network-programming"]
description = "Fast, easy to use XML parser library for Jabber/XMPP and general XML processing"
documentation = "https://docs.rs/iks"
edition = "2024"
keywords = ["xml", "xmpp", "jabber", "parser"]
license = "LGPL-3.0-or-later"
name = "iks"
repository = "https://github.com/meduketto/iksemel-rust"
version = "0.5.0"

[dependencies]
rustls = "0.23.34"
webpki-roots = "1.0.4"
base64 = "0.22.1"
rpassword = "7.4.0"

[profile.release]
lto = true
