[package]
categories = ["parsing", "network-programming"]
description = "Fast, easy to use XML parser library for Jabber/XMPP and general XML processing"
documentation = "https://docs.rs/iks"
edition = "2024"
keywords = ["xml", "xmpp", "jabber", "parser"]
license = "LGPL-3.0-or-later"
name = "iks"
repository = "https://github.com/meduketto/iksemel-rust"
version = "0.6.1"

[features]
default = ["xmpp"]
xmpp = ["dep:rustls", "dep:webpki-roots", "dep:base64", "dep:rpassword"]

[dependencies]
rustls = { version = "0.23.39", optional = true }
webpki-roots = { version = "1.0.7", optional = true }
base64 = { version = "0.22.1", optional = true }
rpassword = { version = "7.4.0", optional = true }

[[bin]]
name = "iksjab"
path = "src/bin/iksjab.rs"
required-features = ["xmpp"]

[profile.release]
lto = true

[package.metadata.docs.rs]
# This tells docs.rs to enable all features when generating documentation
all-features = true
